Prevent section from being visible on page load?

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -100,6 +100,8 @@ section {
     ". . . . . . . . .";
   grid-template-columns: 1fr repeat(7, 120px) 1fr;
   grid-template-rows: auto 1fr repeat(2, 140px) 1fr 1fr;
+  opacity: 0;
+  visibility: hidden;
 }
 
 small {
